--- a/README.org
+++ b/README.org
@@ -15,4 +15,21 @@ int main(void) {
 ......
 
      #+END_SRC
+     sockaddr_in在头文件<netinet/in.h>中定义,定义如下
+     #+BEGIN_SRC c
+struct sockaddr_in
+  {
+    __SOCKADDR_COMMON (sin_);
+    in_port_t sin_port;			/* Port number.  */
+    struct in_addr sin_addr;		/* Internet address.  */
+
+    /* Pad to size of `struct sockaddr'.  */
+    unsigned char sin_zero[sizeof (struct sockaddr) -
+			   __SOCKADDR_COMMON_SIZE -
+			   sizeof (in_port_t) -
+			   sizeof (struct in_addr)];
+  };
+
+     #+END_SRC
+     这是我系统里的sockaddr_in 结构定义，这是ipv4 socket struct
      
